--- a/README
+++ b/README
@@ -31,6 +31,9 @@ How?
     "when/created" => "2011" })
   obj.add_component(File.new("/tmp/helloworld_a"))
   obj.add_component(File.new("/tmp/helloworld_b"))
+  obj.add_component(URI.parse("http://example.org/xxx"),
+                    :name => "helloworld_c",
+                    :digest => Mrt::Ingest::MessageDigest::MD5.new("6f5902ac237024bdd0c176cb93063dc4"))
   obj.start_ingest(client, "demo_merritt_content", "me/My Name")
   obj.finish_ingest()
 
