--- a/README
+++ b/README
@@ -1,26 +1,17 @@
-===================
- mrt-ingest (ruby)
-===================
-  :Date: 6 Sept. 2011
-  :Author: Erik Hetzner <erik.hetzner@ucop.edu>
+= mrt-ingest (ruby)
+Date:: 6 Sept. 2011
+Author:: Erik Hetzner (mailto:erik.hetzner@ucop.edu)
 
-What?
------
+== What?
 
-A Ruby ingest client for Merritt_.
+A Ruby ingest client for Merritt[http://merritt.cdlib.org/].
 
-Install
--------
-
-::
+== Install
 
   $ gem build mrt-ingest.gemspec
   $ sudo gem install mrt-ingest-0.1.1.gem
 
-How?
-----
-
-::
+== How?
 
   require 'rubygems'
   require 'mrt/ingest'
@@ -36,5 +27,3 @@ How?
                     :digest => Mrt::Ingest::MessageDigest::MD5.new("6f5902ac237024bdd0c176cb93063dc4"))
   obj.start_ingest(client, "demo_merritt_content", "me/My Name")
   obj.finish_ingest()
-
-.. _Merritt: http://merritt.cdlib.org/
